Content changes and few alignment fixes

--- a/src/app/si/si.component.scss
+++ b/src/app/si/si.component.scss
@@ -83,6 +83,10 @@ $fy-page-info-desc: #414562;
     }
   }
 
+  .side-nav {
+    overflow: hidden;
+  }
+
   .mat-drawer-content {
     background-color: $fy-white;
   }
